🎨 レスポンスは良くなったがapi docは{}で出力される
