# apps/api/docs/swagger.json
@@ -66,13 +66,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TokenResponse"
+                            "$ref": "#/definitions/dto.UserDTOResponse"
                         }
                     },
                     "400": {
                         "description": "バリデーションエラー",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDTOResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
@@ -110,7 +110,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "登録成功時のレスポンス",
                         "schema": {
                             "$ref": "#/definitions/dto.UserDTOResponse"
                         }
@@ -164,14 +164,6 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.TokenResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
                     "type": "string"
                 }
             }
